--- a/pages/bio.css
+++ b/pages/bio.css
@@ -123,96 +123,32 @@ nav ul li a:hover{
   }
 
 
-
-.hero {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 2.5rem;
-    max-width: 68.75rem;
-    margin: auto;
-  }
-
-  .about {
-    width: 25rem;
-    padding: 0.625rem;
-    border-radius: 6px;
-    box-shadow: 0px 2px 15px 2px var(--primary-shadow);
-  }
-
-  .section img{
-    border-radius: 25px;
-  }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media screen and (max-width:768px){
-    .section .cont{
-        width: 80%;
-        display: block;
-        margin: auto;
-    }
-    .content{
-        float: none;
-        width:100%;
-        display: block;
-        margin: auto;
-    }
-
-    .images-selection{
-        float: none;
-        width:100% ;
-        margin-top: 50px;
-
-    }
-    .images-selection img{
-        width: 100%;
-        height:auto;
-        display: block;
-        margin: auto;
-    }
-
-    .container .title h1{
-        text-align: center;
-        font-size: 30px;
-    }
-
-    .container .article .button{
-        text-align: center;
-    }
-
-    .container .article .button a{
-        padding: 6px 15px ;
-        font-size: 16px;
-
-    }
-
-    .container .social i{
-        font-size: 19px;
-        height:35px;
-        width:35px;
-        line-height: 35px;
-
-    }
-
-
+.section img{
+    float: left;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media(min-device-width : 320px) 
+and (max-device-width : 480px) and (max-width: 480px)
